--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,7 +31,7 @@ spring:
     password: igdefault
   jpa:
     hibernate:
-     ddl-auto: update
+     ddl-auto: create-drop
 multipart:
   maxFileSize: 1024Mb
 
