--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,12 @@
             <artifactId>tomcat-embed-jasper</artifactId>
         </dependency>
 
+        <!-- tag::security[] -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>1.3.2.RELEASE</version>
+        </dependency>
 
         <dependency>
             <groupId>org.postgresql</groupId>
